sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:18: error: ')' expected but '}' found.
      }
      ^